--- a/index.html
+++ b/index.html
@@ -13,21 +13,6 @@
       text-align: center;
       font-size: 24px;
       color: white;
-      font-family: sans-serif;<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Backrooms 3D</title>
-  <style>
-    body { margin: 0; overflow: hidden; background: black; }
-    #instructions {
-      position: absolute;
-      top: 50%;
-      width: 100%;
-      text-align: center;
-      font-size: 24px;
-      color: white;
       font-family: sans-serif;
       transform: translateY(-50%);
       user-select: none;
@@ -56,6 +41,7 @@
   var controls = new THREE.PointerLockControls(camera, document.body);
   var instructions = document.getElementById('instructions');
 
+  // Click event to lock pointer and hide instructions
   instructions.addEventListener('click', function() {
     controls.lock();
   });
@@ -65,7 +51,7 @@
   });
 
   controls.addEventListener('unlock', function() {
-    instructions.style.display = '';
+    instructions.style.display = '';  // Show the instructions when unlock
   });
 
   scene.add(controls.getObject());
@@ -81,17 +67,8 @@
 
   // Textures (Backrooms-style)
   var textureLoader = new THREE.TextureLoader();
-  var wallTexture = textureLoader.load('https://upload.wikimedia.org/wikipedia/commons/6/68/Backrooms_wall_texture.jpg', function() {
-    console.log("Wall texture loaded successfully!");
-  }, undefined, function(err) {
-    console.error("Error loading wall texture:", err);
-  });
-
-  var floorTexture = textureLoader.load('https://upload.wikimedia.org/wikipedia/commons/e/e5/Dirty_carpet_texture.jpg', function() {
-    console.log("Floor texture loaded successfully!");
-  }, undefined, function(err) {
-    console.error("Error loading floor texture:", err);
-  });
+  var wallTexture = textureLoader.load('https://upload.wikimedia.org/wikipedia/commons/6/68/Backrooms_wall_texture.jpg');
+  var floorTexture = textureLoader.load('https://upload.wikimedia.org/wikipedia/commons/e/e5/Dirty_carpet_texture.jpg');
 
   // Collision boxes
   var collisionBoxes = [];
@@ -197,187 +174,6 @@
     direction.z = Number(moveForward) - Number(moveBackward);
     direction.x = Number(moveRight) - Number(moveLeft);
     direction.normalize();
-
-    if (moveForward || moveBackward) velocity.z -= direction.z * 400.0 * delta;
-    if (moveLeft || moveRight) velocity.x -= direction.x * 400.0 * delta;
-
-    var oldPosition = controls.getObject().position.clone();
-
-    controls.moveRight(-velocity.x * delta);
-    controls.moveForward(-velocity.z * delta);
-    controls.getObject().position.y += velocity.y * delta;
-
-    if (checkCollision(controls.getObject().position)) {
-      controls.getObject().position.copy(oldPosition);
-      velocity.x = 0;
-      velocity.z = 0;
-    }
-
-    if (controls.getObject().position.y < playerHeight) {
-      velocity.y = 0;
-      controls.getObject().position.y = playerHeight;
-      canJump = true;
-    }
-
-    renderer.render(scene, camera);
-  }
-
-  animate();
-</script>
-</body>
-</html>
-
-      user-select: none;
-    }
-  </style>
-</head>
-<body>
-<div id="instructions">Click to Start</div>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three@0.128/examples/js/controls/PointerLockControls.js"></script>
-
-<script>
-  // Setup scene, camera, renderer
-  var scene = new THREE.Scene();
-  var camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
-  var renderer = new THREE.WebGLRenderer();
-  renderer.setSize(window.innerWidth, window.innerHeight);
-  document.body.appendChild(renderer.domElement);
-
-  // Lighting
-  var light = new THREE.HemisphereLight(0xffffbb, 0x080820, 1);
-  scene.add(light);
-
-  // Pointer Lock Controls
-  var controls = new THREE.PointerLockControls(camera, document.body);
-  var instructions = document.getElementById('instructions');
-
-  instructions.addEventListener('click', function() {
-    controls.lock();
-  });
-
-  controls.addEventListener('lock', function() {
-    instructions.style.display = 'none';
-  });
-
-  controls.addEventListener('unlock', function() {
-    instructions.style.display = '';
-  });
-
-  scene.add(controls.getObject());
-
-  controls.getObject().position.set(0, 5, 0); // Spawn higher, above floor
-
-  // Textures (Backrooms-style)
-  var textureLoader = new THREE.TextureLoader();
-  var wallTexture = textureLoader.load('https://upload.wikimedia.org/wikipedia/commons/6/68/Backrooms_wall_texture.jpg');
-  var floorTexture = textureLoader.load('https://upload.wikimedia.org/wikipedia/commons/e/e5/Dirty_carpet_texture.jpg');
-
-  // Collision boxes
-  var collisionBoxes = [];
-
-  function createWall(width, height, depth, x, y, z, material) {
-    var geometry = new THREE.BoxGeometry(width, height, depth);
-    var mesh = new THREE.Mesh(geometry, material);
-    mesh.position.set(x, y, z);
-    scene.add(mesh);
-
-    var box = new THREE.Box3().setFromObject(mesh);
-    collisionBoxes.push(box);
-  }
-
-  function createInitialRoom() {
-    var wallMaterial = new THREE.MeshBasicMaterial({ map: wallTexture });
-    var floorMaterial = new THREE.MeshBasicMaterial({ map: floorTexture });
-
-    createWall(20, 1, 20, 0, 0, 0, floorMaterial); // Floor
-    createWall(1, 5, 20, -10, 2.5, 0, wallMaterial); // Left Wall
-    createWall(1, 5, 20, 10, 2.5, 0, wallMaterial); // Right Wall
-    createWall(20, 5, 1, 0, 2.5, -10, wallMaterial); // Back Wall
-    createWall(20, 5, 1, 0, 2.5, 10, wallMaterial); // Front Wall
-    createWall(20, 1, 20, 0, 5, 0, wallMaterial); // Ceiling
-  }
-
-  function generateRandomRoom() {
-    var wallMaterial = new THREE.MeshBasicMaterial({ map: wallTexture });
-    var floorMaterial = new THREE.MeshBasicMaterial({ map: floorTexture });
-
-    var randomX = (Math.floor(Math.random() * 5) - 2) * 20;
-    var randomZ = (Math.floor(Math.random() * 5) - 2) * 20;
-
-    createWall(20, 1, 20, randomX, 0, randomZ, floorMaterial);
-    createWall(1, 5, 20, randomX - 10, 2.5, randomZ, wallMaterial);
-    createWall(1, 5, 20, randomX + 10, 2.5, randomZ, wallMaterial);
-    createWall(20, 5, 1, randomX, 2.5, randomZ - 10, wallMaterial);
-    createWall(20, 5, 1, randomX, 2.5, randomZ + 10, wallMaterial);
-    createWall(20, 1, 20, randomX, 5, randomZ, wallMaterial);
-  }
-
-  createInitialRoom();
-  setInterval(generateRandomRoom, 3000);
-
-  // Movement
-  var moveForward = false;
-  var moveBackward = false;
-  var moveLeft = false;
-  var moveRight = false;
-  var canJump = false;
-
-  var velocity = new THREE.Vector3();
-  var direction = new THREE.Vector3();
-  var gravity = 30;
-  var playerHeight = 1.8;
-
-  document.addEventListener('keydown', function(event) {
-    switch (event.code) {
-      case 'KeyW': moveForward = true; break;
-      case 'KeyS': moveBackward = true; break;
-      case 'KeyA': moveLeft = true; break;
-      case 'KeyD': moveRight = true; break;
-      case 'Space':
-        if (canJump) {
-          velocity.y += 10;
-          canJump = false;
-        }
-        break;
-    }
-  });
-
-  document.addEventListener('keyup', function(event) {
-    switch (event.code) {
-      case 'KeyW': moveForward = false; break;
-      case 'KeyS': moveBackward = false; break;
-      case 'KeyA': moveLeft = false; break;
-      case 'KeyD': moveRight = false; break;
-    }
-  });
-
-  var clock = new THREE.Clock();
-
-  function checkCollision(position) {
-    var boxSize = new THREE.Vector3(1, playerHeight, 1);
-    var playerBox = new THREE.Box3().setFromCenterAndSize(
-      position.clone().add(new THREE.Vector3(0, boxSize.y/2, 0)),
-      boxSize
-    );
-    for (var i = 0; i < collisionBoxes.length; i++) {
-      if (playerBox.intersectsBox(collisionBoxes[i])) {
-        return true;
-      }
-    }
-    return false;
-  }
-
-  function animate() {
-    requestAnimationFrame(animate);
-
-    var delta = clock.getDelta();
-    velocity.y -= gravity * delta;
-
-    direction.z = Number(moveForward) - Number(moveBackward);
-    direction.x = Number(moveRight) - Number(moveLeft);
-    direction.normalize(); 
 
     if (moveForward || moveBackward) velocity.z -= direction.z * 400.0 * delta;
     if (moveLeft || moveRight) velocity.x -= direction.x * 400.0 * delta;
