--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Backrooms 3D</title>
   <style>
     body { margin: 0; overflow: hidden; background: black; }
@@ -16,6 +16,7 @@
       font-family: sans-serif;
       transform: translateY(-50%);
       user-select: none;
+      cursor: pointer;
     }
   </style>
 </head>
@@ -26,102 +27,94 @@
 <script src="https://cdn.jsdelivr.net/npm/three@0.128/examples/js/controls/PointerLockControls.js"></script>
 
 <script>
-  // Setup scene, camera, renderer
-  var scene = new THREE.Scene();
-  var camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-  var renderer = new THREE.WebGLRenderer();
+  // Scene setup
+  const scene = new THREE.Scene();
+  const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+  const renderer = new THREE.WebGLRenderer();
   renderer.setSize(window.innerWidth, window.innerHeight);
   document.body.appendChild(renderer.domElement);
 
   // Lighting
-  var light = new THREE.HemisphereLight(0xffffbb, 0x080820, 1.5); // Increased light intensity
+  const light = new THREE.HemisphereLight(0xffffbb, 0x080820, 1.5);
   scene.add(light);
 
-  // Pointer Lock Controls
-  var controls = new THREE.PointerLockControls(camera, document.body);
-  var instructions = document.getElementById('instructions');
+  // Pointer lock
+  const controls = new THREE.PointerLockControls(camera, document.body);
+  const instructions = document.getElementById('instructions');
 
-  // Click event to lock pointer and hide instructions
-  instructions.addEventListener('click', function () {
+  instructions.addEventListener('click', () => {
     controls.lock();
   });
 
-  controls.addEventListener('lock', function () {
+  controls.addEventListener('lock', () => {
     instructions.style.display = 'none';
   });
 
-  controls.addEventListener('unlock', function () {
-    instructions.style.display = '';  // Show the instructions when unlock
+  controls.addEventListener('unlock', () => {
+    instructions.style.display = '';
   });
 
   scene.add(controls.getObject());
+  controls.getObject().position.set(0, 5, 0); // Start above floor
 
-  controls.getObject().position.set(0, 5, 0); // Start camera above floor
+  // Load textures
+  const loader = new THREE.TextureLoader();
+  const textureURL = 'https://raw.githubusercontent.com/Loadbit6/Backrooms/cf8b91c3f1be68357d81872c47d75e3acda8fd00/textures/tex.jpeg';
+  const wallTex = loader.load(textureURL);
+  const floorTex = loader.load(textureURL);
 
-  // Load textures from GitHub repository (replace with your actual file paths)
-  var textureLoader = new THREE.TextureLoader();
-  var wallTexture = textureLoader.load('https://raw.githubusercontent.com/Loadbit6/Backrooms/cf8b91c3f1be68357d81872c47d75e3acda8fd00/textures/tex.jpeg');
-  var floorTexture = textureLoader.load('https://raw.githubusercontent.com/Loadbit6/Backrooms/cf8b91c3f1be68357d81872c47d75e3acda8fd00/textures/tex.jpeg');
+  const collisionBoxes = [];
 
-  // Collision boxes for the walls
-  var collisionBoxes = [];
-
-  function createWall(width, height, depth, x, y, z, material) {
-    var geometry = new THREE.BoxGeometry(width, height, depth);
-    var mesh = new THREE.Mesh(geometry, material);
+  function createWall(w, h, d, x, y, z, material) {
+    const box = new THREE.BoxGeometry(w, h, d);
+    const mesh = new THREE.Mesh(box, material);
     mesh.position.set(x, y, z);
     scene.add(mesh);
-
-    var box = new THREE.Box3().setFromObject(mesh);
-    collisionBoxes.push(box);
+    const bbox = new THREE.Box3().setFromObject(mesh);
+    collisionBoxes.push(bbox);
   }
 
-  function createInitialRoom() {
-    var wallMaterial = new THREE.MeshBasicMaterial({ map: wallTexture });
-    var floorMaterial = new THREE.MeshBasicMaterial({ map: floorTexture });
+  function createRoom() {
+    const wallMat = new THREE.MeshBasicMaterial({ map: wallTex });
+    const floorMat = new THREE.MeshBasicMaterial({ map: floorTex });
 
-    // Create walls and floor with texture
-    createWall(20, 1, 20, 0, 0, 0, floorMaterial);  // Floor
-    createWall(1, 5, 20, -10, 2.5, 0, wallMaterial);  // Left Wall
-    createWall(1, 5, 20, 10, 2.5, 0, wallMaterial);  // Right Wall
-    createWall(20, 5, 1, 0, 2.5, -10, wallMaterial);  // Back Wall
-    createWall(20, 5, 1, 0, 2.5, 10, wallMaterial);  // Front Wall
-    createWall(20, 1, 20, 0, 5, 0, wallMaterial);   // Ceiling
+    createWall(20, 1, 20, 0, 0, 0, floorMat);    // Floor
+    createWall(20, 1, 20, 0, 5, 0, wallMat);     // Ceiling
+    createWall(1, 5, 20, -10, 2.5, 0, wallMat);  // Left
+    createWall(1, 5, 20, 10, 2.5, 0, wallMat);   // Right
+    createWall(20, 5, 1, 0, 2.5, -10, wallMat);  // Back
+    createWall(20, 5, 1, 0, 2.5, 10, wallMat);   // Front
   }
 
-  createInitialRoom();
+  createRoom();
 
-  // Movement controls
-  var moveForward = false;
-  var moveBackward = false;
-  var moveLeft = false;
-  var moveRight = false;
-  var canJump = false;
+  // Movement
+  let moveForward = false, moveBackward = false, moveLeft = false, moveRight = false;
+  let canJump = false;
+  const velocity = new THREE.Vector3();
+  const direction = new THREE.Vector3();
+  const gravity = 30;
+  const jumpStrength = 5;
+  const playerHeight = 1.8;
+  const speed = 3;
 
-  var velocity = new THREE.Vector3();
-  var direction = new THREE.Vector3();
-  var gravity = 30;
-  var playerHeight = 1.8;
-  var movementSpeed = 3; // Reduced speed for movement
-  var jumpHeight = 5; // Adjusted jump height
-
-  document.addEventListener('keydown', function (event) {
-    switch (event.code) {
+  document.addEventListener('keydown', (e) => {
+    switch (e.code) {
       case 'KeyW': moveForward = true; break;
       case 'KeyS': moveBackward = true; break;
       case 'KeyA': moveLeft = true; break;
       case 'KeyD': moveRight = true; break;
       case 'Space':
         if (canJump) {
-          velocity.y = jumpHeight;
+          velocity.y = jumpStrength;
           canJump = false;
         }
         break;
     }
   });
 
-  document.addEventListener('keyup', function (event) {
-    switch (event.code) {
+  document.addEventListener('keyup', (e) => {
+    switch (e.code) {
       case 'KeyW': moveForward = false; break;
       case 'KeyS': moveBackward = false; break;
       case 'KeyA': moveLeft = false; break;
@@ -129,43 +122,39 @@
     }
   });
 
-  var clock = new THREE.Clock();
+  const clock = new THREE.Clock();
 
-  function checkCollision(position) {
-    var boxSize = new THREE.Vector3(1, playerHeight, 1);
-    var playerBox = new THREE.Box3().setFromCenterAndSize(
-      position.clone().add(new THREE.Vector3(0, boxSize.y / 2, 0)),
-      boxSize
-    );
-    for (var i = 0; i < collisionBoxes.length; i++) {
-      if (playerBox.intersectsBox(collisionBoxes[i])) {
-        return true;
-      }
-    }
-    return false;
+  function checkCollision(pos) {
+    const size = new THREE.Vector3(1, playerHeight, 1);
+    const box = new THREE.Box3().setFromCenterAndSize(pos.clone().add(new THREE.Vector3(0, size.y / 2, 0)), size);
+    return collisionBoxes.some(other => box.intersectsBox(other));
   }
 
   function animate() {
     requestAnimationFrame(animate);
+    const delta = clock.getDelta();
 
-    var delta = clock.getDelta();
     velocity.y -= gravity * delta;
 
     direction.z = Number(moveForward) - Number(moveBackward);
     direction.x = Number(moveRight) - Number(moveLeft);
     direction.normalize();
 
-    if (moveForward || moveBackward) velocity.z -= direction.z * movementSpeed * 100.0 * delta;
-    if (moveLeft || moveRight) velocity.x -= direction.x * movementSpeed * 100.0 * delta;
+    if (moveForward || moveBackward) velocity.z -= direction.z * speed * 100.0 * delta;
+    if (moveLeft || moveRight) velocity.x -= direction.x * speed * 100.0 * delta;
 
-    var oldPosition = controls.getObject().position.clone();
+    // Apply friction to reduce sliding
+    velocity.x -= velocity.x * 10.0 * delta;
+    velocity.z -= velocity.z * 10.0 * delta;
+
+    const oldPos = controls.getObject().position.clone();
 
     controls.moveRight(-velocity.x * delta);
     controls.moveForward(-velocity.z * delta);
     controls.getObject().position.y += velocity.y * delta;
 
     if (checkCollision(controls.getObject().position)) {
-      controls.getObject().position.copy(oldPosition);
+      controls.getObject().position.copy(oldPos);
       velocity.x = 0;
       velocity.z = 0;
     }
