--- a/index.html
+++ b/index.html
@@ -2,68 +2,249 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Backrooms Texture Fix</title>
-  <style>body { margin: 0; overflow: hidden; }</style>
+  <title>Backrooms Maze</title>
+  <style>
+    body { margin: 0; overflow: hidden; background: black; }
+    #instructions {
+      position: absolute;
+      top: 50%;
+      width: 100%;
+      text-align: center;
+      font-size: 24px;
+      color: white;
+      font-family: sans-serif;
+      transform: translateY(-50%);
+      user-select: none;
+      cursor: pointer;
+    }
+    #sprintBarContainer {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 200px;
+      height: 20px;
+      background: rgba(255, 255, 255, 0.1);
+      border: 2px solid #fff;
+      border-radius: 10px;
+      overflow: hidden;
+    }
+    #sprintBar {
+      width: 100%;
+      height: 100%;
+      background: limegreen;
+      transition: width 0.1s linear;
+    }
+  </style>
 </head>
 <body>
-  <script type="module">
-    import * as THREE from 'https://cdn.skypack.dev/three';
+<div id="instructions">Click to Start</div>
+<div id="sprintBarContainer">
+  <div id="sprintBar"></div>
+</div>
 
-    const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
-    camera.position.set(0, 1.6, 5);
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.128/examples/js/controls/PointerLockControls.js"></script>
 
-    const renderer = new THREE.WebGLRenderer();
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    document.body.appendChild(renderer.domElement);
+<script>
+const scene = new THREE.Scene();
+const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+const renderer = new THREE.WebGLRenderer();
+renderer.setSize(window.innerWidth, window.innerHeight);
+document.body.appendChild(renderer.domElement);
 
-    // Lighting
-    const ambient = new THREE.AmbientLight(0xffffff, 0.5);
-    const directional = new THREE.DirectionalLight(0xffffff, 1);
-    directional.position.set(10, 10, 10);
-    scene.add(ambient, directional);
+const controls = new THREE.PointerLockControls(camera, document.body);
+document.getElementById("instructions").onclick = () => controls.lock();
+controls.addEventListener('lock', () => document.getElementById("instructions").style.display = 'none');
+controls.addEventListener('unlock', () => document.getElementById("instructions").style.display = '');
+controls.getObject().position.set(0, 2, 0);
+scene.add(controls.getObject());
 
-    const loader = new THREE.TextureLoader();
+const light = new THREE.HemisphereLight(0xffffbb, 0x080820, 1.5);
+scene.add(light);
 
-    function loadTiledTexture(url, width, height, tileSize = 2) {
-      const tex = loader.load(url);
-      tex.wrapS = tex.wrapT = THREE.RepeatWrapping;
-      tex.repeat.set(width / tileSize, height / tileSize);
-      tex.encoding = THREE.sRGBEncoding;
-      return tex;
+const loader = new THREE.TextureLoader();
+const wallTex = loader.load('https://raw.githubusercontent.com/Loadbit6/Backrooms/main/textures/wall.jpeg');
+const floorTex = loader.load('https://raw.githubusercontent.com/Loadbit6/Backrooms/main/textures/floor.jpg');
+const ceilTex  = loader.load('https://raw.githubusercontent.com/Loadbit6/Backrooms/main/textures/ceiling.jpg');
+
+wallTex.wrapS = wallTex.wrapT = THREE.RepeatWrapping;
+floorTex.wrapS = floorTex.wrapT = THREE.RepeatWrapping;
+ceilTex.wrapS  = ceilTex.wrapT  = THREE.RepeatWrapping;
+
+function makeRGBMaterial(tex, r, g, b, repeatX, repeatY) {
+  return new THREE.ShaderMaterial({
+    uniforms: {
+      tex: { value: tex },
+      rMult: { value: r },
+      gMult: { value: g },
+      bMult: { value: b },
+      repeat: { value: new THREE.Vector2(repeatX, repeatY) }
+    },
+    vertexShader: `
+      varying vec2 vUv;
+      uniform vec2 repeat;
+      void main() {
+        vUv = uv * repeat;
+        gl_Position = projectionMatrix * modelViewMatrix * vec4(position, 1.0);
+      }
+    `,
+    fragmentShader: `
+      uniform sampler2D tex;
+      uniform float rMult;
+      uniform float gMult;
+      uniform float bMult;
+      varying vec2 vUv;
+      void main() {
+        vec4 color = texture2D(tex, vUv);
+        color.r *= rMult;
+        color.g *= gMult;
+        color.b *= bMult;
+        gl_FragColor = color;
+      }
+    `,
+    side: THREE.DoubleSide
+  });
+}
+
+const wallMat  = makeRGBMaterial(wallTex, 0.9, 0.8, 0.8, 2, 1);
+const floorMat = makeRGBMaterial(floorTex, 1.1, 1.1, 1.1, 8, 8);
+const ceilMat  = makeRGBMaterial(ceilTex, 0.75, 0.7, 0.4, 2, 2);
+ceilMat.side = THREE.DoubleSide;
+
+const collisionBoxes = [];
+function createWall(w, h, d, x, y, z, material) {
+  const geo = new THREE.BoxGeometry(w, h, d);
+  const mesh = new THREE.Mesh(geo, material);
+  mesh.position.set(x, y, z);
+  scene.add(mesh);
+  collisionBoxes.push(new THREE.Box3().setFromObject(mesh));
+}
+
+function createRoom() {
+  createWall(20, 1, 20, 0, 0, 0, floorMat); // floor
+
+  const ceilGeo = new THREE.PlaneGeometry(20, 20);
+  const ceilMesh = new THREE.Mesh(ceilGeo, ceilMat);
+  ceilMesh.rotation.x = Math.PI / 2;
+  ceilMesh.position.y = 5;
+  scene.add(ceilMesh);
+  collisionBoxes.push(new THREE.Box3().setFromObject(ceilMesh));
+
+  createWall(1, 5, 20, -10, 2.5, 0, wallMat);
+  createWall(1, 5, 20,  10, 2.5, 0, wallMat);
+  createWall(20, 5, 1,  0, 2.5, -10, wallMat);
+  createWall(20, 5, 1,  0, 2.5, 10, wallMat);
+}
+createRoom();
+
+// Load maze from GitHub
+fetch('https://raw.githubusercontent.com/Loadbit6/Backrooms/7da3900a93c44841c52c9a9478076852d420b11d/maze.json')
+  .then(response => response.json())
+  .then(data => {
+    data.forEach(wall => {
+      createWall(wall.w, wall.h, wall.d, wall.x, wall.y, wall.z, wallMat);
+    });
+  });
+
+// Sprint variables
+let sprintAmount = 1.0;  // Full sprint meter
+let sprinting = false;
+let cooldown = false;
+const sprintBar = document.getElementById('sprintBar');
+const sprintSpeed = 1.5;  // Sprint speed factor
+const walkSpeed = 1;      // Normal walking speed
+const sprintDrainRate = 0.02;  // How quickly sprint drains
+const sprintRegenRate = 0.005; // How quickly sprint regenerates
+
+// Movement variables
+const velocity = new THREE.Vector3();
+const direction = new THREE.Vector3();
+const keys = {};
+document.addEventListener('keydown', e => keys[e.code] = true);
+document.addEventListener('keyup', e => keys[e.code] = false);
+
+// Collision check
+function checkCollisions(pos) {
+  const box = new THREE.Box3().setFromCenterAndSize(pos, new THREE.Vector3(1, 2, 1));
+  return collisionBoxes.some(c => c.intersectsBox(box));
+}
+
+function animate() {
+  requestAnimationFrame(animate);
+
+  if (controls.isLocked) {
+    direction.set(0, 0, 0);
+    if (keys['KeyW']) direction.z -= 1;  // Forward
+    if (keys['KeyS']) direction.z += 1;  // Backward
+    if (keys['KeyA']) direction.x -= 1;
+    if (keys['KeyD']) direction.x += 1;
+
+    direction.normalize();
+    let speed = walkSpeed;
+
+    // Sprinting logic
+    if (keys['ShiftLeft'] && !cooldown && sprintAmount > 0) {
+      sprinting = true;
+      speed = sprintSpeed;
+      sprintAmount -= sprintDrainRate;
+      if (sprintAmount <= 0) {
+        sprintAmount = 0;
+        cooldown = true;
+        sprinting = false;
+      }
+    } else {
+      sprinting = false;
+      if (!cooldown && sprintAmount < 1) {
+        sprintAmount += sprintRegenRate;
+      }
     }
 
-    // Floor
-    const floorWidth = 50;
-    const floorDepth = 50;
-    const floorTex = loadTiledTexture('https://i.imgur.com/c4d8QPa.jpeg', floorWidth, floorDepth);
-    const floorMat = new THREE.MeshStandardMaterial({ map: floorTex });
-    const floor = new THREE.Mesh(new THREE.PlaneGeometry(floorWidth, floorDepth), floorMat);
-    floor.rotation.x = -Math.PI / 2;
-    scene.add(floor);
-
-    // Wall
-    const wallWidth = 50;
-    const wallHeight = 3;
-    const wallTex = loadTiledTexture('https://i.imgur.com/lGfQp2p.jpeg', wallWidth, wallHeight);
-    const wallMat = new THREE.MeshStandardMaterial({ map: wallTex });
-    const wall = new THREE.Mesh(new THREE.PlaneGeometry(wallWidth, wallHeight), wallMat);
-    wall.position.set(0, wallHeight / 2, -25);
-    scene.add(wall);
-
-    // Ceiling
-    const ceilTex = loadTiledTexture('https://i.imgur.com/AkgRkNQ.jpeg', floorWidth, floorDepth);
-    const ceilMat = new THREE.MeshStandardMaterial({ map: ceilTex });
-    const ceiling = new THREE.Mesh(new THREE.PlaneGeometry(floorWidth, floorDepth), ceilMat);
-    ceiling.rotation.x = Math.PI / 2;
-    ceiling.position.y = 3;
-    scene.add(ceiling);
-
-    function animate() {
-      requestAnimationFrame(animate);
-      renderer.render(scene, camera);
+    if (cooldown && sprintAmount >= 1) {
+      cooldown = false;
     }
-    animate();
-  </script>
+
+    // Update sprint bar
+    sprintBar.style.width = `${sprintAmount * 100}%`;
+    sprintBar.style.background = cooldown ? 'red' : (sprinting ? 'yellow' : 'limegreen');
+
+    // Update velocity
+    const delta = 0.1;
+    velocity.x = direction.x * speed * delta;
+    velocity.z = direction.z * speed * delta;
+
+    // Movement aligned to camera
+    const forward = new THREE.Vector3();
+    controls.getDirection(forward);
+    forward.y = 0;
+    forward.normalize();
+
+    const right = new THREE.Vector3();
+    right.crossVectors(forward, new THREE.Vector3(0, 1, 0)).normalize();
+
+    // Move the player
+    const move = new THREE.Vector3();
+    move.addScaledVector(forward, -velocity.z);  // Negative velocity.z for correct movement direction
+    move.addScaledVector(right, velocity.x);
+
+    // Slide along walls: check X and Z movement separately
+    const currentPos = controls.getObject().position.clone();
+
+    const tryX = currentPos.clone().add(new THREE.Vector3(move.x, 0, 0));
+    if (!checkCollisions(tryX)) {
+      controls.getObject().position.x = tryX.x;
+    }
+
+    const tryZ = currentPos.clone().add(new THREE.Vector3(0, 0, move.z));
+    if (!checkCollisions(tryZ)) {
+      controls.getObject().position.z = tryZ.z;
+    }
+  }
+
+  renderer.render(scene, camera);
+}
+
+animate();
+</script>
 </body>
 </html>
